<resources>
    <string name="app_name">Aqua Cube</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_frag_def_text">Header Text</string>
    <string name="all_img_desc">dummy desc bc Android is stupid</string>
    <string name="goals_list_header_text">Your Goals</string>
    <string name="goal_li_def_name">Golden Rule</string>
    <string name="goal_li_def_water_amount">4 liters per day</string>
    <string name="goal_li_def_status">Active</string>
    <string name="add_btn_text">+</string>
    <string name="app_title">Aqua Cube</string>
    <string name="home_population_menu">POPULATION MENU</string>
    <string name="home_campaigns">CAMPAIGNS</string>
    <string name="home_goals">GOALS</string>
    <string name="home_complains">COMPLAINS</string>
</resources>