<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/goal_li_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/goal_list_item"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp"
    android:layout_marginVertical="@dimen/list_item_py">

    <TextView
        android:id="@+id/goal_li_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/goal_li_def_name"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/goal_li_water_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/inter"
        android:text="@string/goal_li_def_water_amount"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goal_li_name" />

    <TextView
        android:id="@+id/goal_li_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:shadowColor="#0085FF"
        android:shadowRadius="8"
        android:text="@string/goal_li_def_status"
        android:textColor="#0B108D"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>